updated geninfo, add libs and text files and refactored some functions into new files add new text file and video files for gen info moved some functions into util class created text class for default text areas add video player, not working on linux possible driver issue