@@ -1,5 +1,6 @@
 import java.awt.BorderLayout;
 import java.awt.Component;
+import java.awt.Desktop;
 import java.awt.Dimension;
 import java.awt.Font;
 import java.awt.GridBagConstraints;
@@ -7,8 +8,7 @@ import java.awt.GridBagLayout;
 import java.awt.GridLayout;
 import java.io.File;
 import java.io.FileInputStream;
-import java.net.URL;
-
+import java.net.*;
 import javax.swing.GroupLayout.Alignment;
 import javax.swing.JButton;
 import javax.swing.JFrame;
@@ -18,18 +18,30 @@ import javax.swing.JScrollPane;
 import javax.swing.JTextArea;
 import javax.swing.JTextField;
 import javax.swing.WindowConstants;
-import javax.media.*;
-
+import javafx.embed.swing.JFXPanel;
+import javafx.scene.Group;
+import javafx.scene.Scene;
+import javafx.scene.media.*;
 import org.apache.commons.io.FileUtils;
 
-import com.sun.media.MediaPlayer;
+
 
 public class GenInfo {
 	private static JButton[] buttons;
 	private static JPanel botPanel;
 	private static JScrollPane scroll;
 	private static JPanel topPanel;
-	private static JTextArea intro;
+	
+	private static Text intro;
+	private static Text finish;
+	private static Text current;
+	private static Text entanglment;
+	private static Text quantumLogic;
+	private static Text speed;
+	private static Text superPostion;
+	private static Text uses;
+	private static Text[] text;
+	
 	private static JButton back;
 	private static JButton video1;
 	private static JButton video2;
@@ -42,7 +54,7 @@ public class GenInfo {
 		generatePanel();
 	}
 	public static JPanel getPanel(){
-		return botPanel;
+		return topPanel;
 	}
 	public static JButton getButton(int n){
 		return buttons[n];
@@ -50,23 +62,20 @@ public class GenInfo {
 	
 	public static void showVideo(String name,String u){
 		JFrame videoFrame = new JFrame(name);
-		JPanel videoPanel= new JPanel();
+		JFXPanel videoPanel= new JFXPanel();
 		videoFrame.setDefaultCloseOperation(WindowConstants.EXIT_ON_CLOSE);
 		
 		try {
-			URL url = new URL(u);
-			Player player= Manager.createRealizedPlayer(url);
-			Component video = player.getVisualComponent();
-			Component controls= player.getControlPanelComponent();
-			videoPanel.add(video);
-			videoPanel.add(controls);
-			videoFrame.getContentPane().add(videoPanel);
-			videoFrame.pack();
-			videoFrame.setVisible(true);
+		    File videoFile = new File(u);
+			URL url = videoFile.toURI().toURL();
+			MediaPlayer player = new MediaPlayer(new Media(u));
+			player.play();
+			videoPanel.setScene(new Scene(new Group(new MediaView(player))));
+			videoFrame.add(videoPanel);
 		}
 		catch(Exception e){
 			e.printStackTrace();
-			JOptionPane.showMessageDialog(Quantum.getFrame(), "Error loading Video");
+			Utils.showError("Error loading Video");
 		}
 		
 
@@ -74,16 +83,20 @@ public class GenInfo {
 	
 	public static void generatePanel(){
 		botPanel = new JPanel(new GridBagLayout());
-		topPanel = new JPanel();
+		topPanel = new JPanel(new BorderLayout());
 		GridBagConstraints c = new GridBagConstraints();
 		
-		intro = new JTextArea(10,100);
-		intro.setFont(new Font("SERIF",Font.PLAIN,12));
-		intro.setEditable(false);
-		intro.setBackground(Quantum.getFrame().getBackground());
+		text = new Text[8];
+		text[0]=(intro = new Text());
+		text[1]=(finish= new Text());
+		text[2]=(entanglment = new Text());
+		text[3]=(speed = new Text());
+		text[4]=(superPostion = new Text());
+		text[5]=(uses = new Text());
+		text[6]=(current = new Text());
+		text[7]=(quantumLogic = new Text()); 
 		
 		buttons = new JButton[7];
-		
 		back = new JButton("back");
 		exit  = new JButton("exit");
 		video1 = new JButton("Super Postion Video");
@@ -107,28 +120,52 @@ public class GenInfo {
 	
 		
 		try{
-			intro.append(FileUtils.readFileToString(new File("~/../text/Intro.txt")));
+			intro.append(FileUtils.readFileToString(new File("text/Intro.txt")));
+			current.append(FileUtils.readFileToString(new File("text/CurrentState.txt")));
+			finish.append(FileUtils.readFileToString(new File("text/Conclusion.txt")));
+			entanglment.append(FileUtils.readFileToString(new File("text/Entanglment.txt")));
+			quantumLogic.append(FileUtils.readFileToString(new File("text/QuantumLogic.txt")));
+			speed.append(FileUtils.readFileToString(new File("text/Speed.txt")));
+			superPostion.append(FileUtils.readFileToString(new File("text/SuperPosition.txt")));
+			uses.append(FileUtils.readFileToString(new File("text/Uses.txt")));	
 		}
 		catch(Exception e){
 			e.printStackTrace();
-			JOptionPane.showMessageDialog(Quantum.getFrame(), "Error Loading Text.");
+			Utils.showError("Error Loading Text.");
 		}
 		c.gridx=0;
 		c.gridy=0;
 		botPanel.add(intro,c);
 		c.gridy++;
-		botPanel.add(buttons[2],c);
+		botPanel.add(video1,c);
+		c.gridy++;
+		botPanel.add(superPostion,c);
+		c.gridy++;
+		botPanel.add(video2,c);
+		c.gridy++;
+		botPanel.add(entanglment,c);
+		c.gridy++;
+		botPanel.add(video3,c);
+		c.gridy++;
+		botPanel.add(quantumLogic,c);
+		c.gridy++;
+		botPanel.add(speed,c);
+		c.gridy++;
+		botPanel.add(uses,c);
+		c.gridy++;
+		botPanel.add(finish,c);
+		c.gridy++;
+		botPanel.add(paper1,c);
+	    c.gridy++;
+		botPanel.add(paper2,c);
+
 		
-//		scroll = new JScrollPane(botPanel);
-//		scroll.setPreferredSize(new Dimension(1000,1000));
-//		scroll.getVerticalScrollBar().setUnitIncrement(16);
-//		
-//		topPanel.add(scroll,BorderLayout.PAGE_START);
-		
-//		topPanel.add(buttons[1]);
-//		
-//		topPanel.add(buttons[0]);
-//	
+		scroll = new JScrollPane(botPanel);
+		scroll.setPreferredSize(new Dimension(800,450));
+		scroll.getVerticalScrollBar().setUnitIncrement(16);
+		scroll.getVerticalScrollBar().setValue(900000);
+
+		topPanel.add(scroll,BorderLayout.PAGE_START);
 			
 	}
 }
